# hvac_chatbot

./: .env.example  .gitignore  cleanup_db.py  pyproject.toml  requirements.txt  run_app.py  setup.py
.github/workflows/: main_hvac-assistant.yml  main_hvac-chatbot.yml
configs/: config.yaml
src/: main.py
src/document_processing/: formula_extractor.py  hierarchy_builder.py
src/knowledge_base/: rule_engine.py  vector_store.py
src/query_processing/: query_processor.py
src/reasoning/: unit_converter.py
src/ui/: streamlit_app.py
technical-doc-ai/: Makefile  README.md  cleanup_all.py  dockerfile  requirements.txt
technical-doc-ai/src/document_processing/: pdf_parser.py  table_extractor.py
technical-doc-ai/src/knowledge_base/: graph_builder.py
technical-doc-ai/src/reasoning/: math_engine.py
technical-doc-ai/tests/unit/: test_formula_extractor.py  test_math_engine.py  test_rule_engine.py  test_unit_converter.py
tests/: conftest.py
tests/fixtures/: sample_doc.txt
tests/integration/: test_main_application.py
