[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "technical-doc-ai"
version = "1.0.0"
description = "AI system for processing technical documents and answering complex questions"
authors = [{name = "Technical Doc AI Team", email = "info@technicaldocai.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "openai>=1.0.0",
    "python-dotenv",
    "PyPDF2",
    "pdfplumber",
    "camelot-py[cv]",
    "pandas",
    "pytesseract",
    "chromadb",
    "langchain",
    "langchain-openai",
    "llama-index",
    "networkx",
    "pyvis",
    "sympy",
    "pint",
    "numpy",
    "spacy",
    "transformers",
    "sentence-transformers",
    "streamlit",
    "fastapi",
    "uvicorn",
    "pyyaml",
    "loguru",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
    "pre-commit",
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
]

[project.urls]
Homepage = "https://github.com/yourusername/technical-doc-ai"
Repository = "https://github.com/yourusername/technical-doc-ai"
Documentation = "https://technical-doc-ai.readthedocs.io"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "camelot.*",
    "pytesseract.*",
    "chromadb.*",
    "pyvis.*",
    "pint.*",
    "spacy.*",
    "transformers.*",
]
ignore_missing_imports = true